<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	tools:context=".MainActivity">

	<TextView
		android:id="@+id/textView_main"
		android:layout_width="match_parent"
		android:layout_height="0px"
		android:layout_weight="1" />

	<Button
		android:layout_width="match_parent"
		android:layout_height="0px"
		android:layout_weight="1"
		android:onClick="showActivity1"
		android:text="@string/text_activity_1" />
	<Button
		android:layout_width="match_parent"
		android:layout_height="0px"
		android:layout_weight="1"
		android:onClick="showActivity2"
		android:text="@string/text_activity_2" />
	<Button
		android:layout_width="match_parent"
		android:layout_height="0px"
		android:layout_weight="1"
		android:onClick="showActivity3"
		android:text="@string/text_activity_3" />
	<Button
		android:layout_width="match_parent"
		android:layout_height="0px"
		android:layout_weight="1"
		android:onClick="showActivity4"
		android:text="@string/text_activity_4" />
	<Button
		android:layout_width="match_parent"
		android:layout_height="0px"
		android:layout_weight="1"
		android:onClick="showActivity5"
		android:text="@string/text_activity_5" />
	<Button
		android:layout_width="match_parent"
		android:layout_height="0px"
		android:layout_weight="1"
		android:onClick="showActivity6"
		android:text="@string/text_activity_6" />
	<Button
		android:layout_width="match_parent"
		android:layout_height="0px"
		android:layout_weight="1"
		android:onClick="showActivity7"
		android:text="@string/text_activity_7" />
	<Button
		android:layout_width="match_parent"
		android:layout_height="0px"
		android:layout_weight="1"
		android:onClick="showActivity8"
		android:text="@string/text_activity_8" />
	<Button
		android:layout_width="match_parent"
		android:layout_height="0px"
		android:layout_weight="1"
		android:onClick="showActivity9"
		android:text="@string/text_activity_9" />
	<Button
		android:layout_width="match_parent"
		android:layout_height="0px"
		android:layout_weight="1"
		android:onClick="showActivity10"
		android:text="@string/text_activity_10" />

</LinearLayout>